# Web-Scraping-learning

./: Readme.md
Day 1(BeautifulSoup using local files)/: Readme.md  index.html  scrape_script.py  style.css
Day 2(BeutifulSoup Jobs Seaching Project)/: Scraping_script.py
Day 3(BeautifulSoup Book Scraping Website project)/: script.py
Day 4(BeautifulSoup Storing data in Excel Files)/ExcelFiles/: Script.py  books_data.xlsx  pyproject.toml
Day 4(BeautifulSoup Storing data in Excel Files)/ExcelFiles/src/excelfiles/: __init__.py
Day10(Table Extration)/: Main.py  jupiter.ipynb
Day11(Automate the News)/NewsProject/: Requirements.txt  pyproject.toml
Day11(Automate the News)/NewsProject/src/newsproject/: __init__.py  __init__.spec  news.csv
Day12/: pyproject.toml
Day12(Automatic Excel Sheet)/: Requirements.txt  pyproject.toml
Day12(Automatic Excel Sheet)/src/day12/: Add_charts.py  Format.py  Report_to_Pivot.spec  pivot_table.xlsx
Day12/src/day12/: Add_charts.py  Apply_Formula.py  Barchart.xlsx  Report.xlsx  Report_to_Pivot.py  __init__.py
Day13(Udemy Courses Scraper)/: Requirements.txt  pyproject.toml
Day13(Udemy Courses Scraper)/src/day13/: __init__.py  courses.xlsx
Day14(Hacker News Extractor and email Sender)/: Main.py  config.json  pyproject.toml
Day14(Hacker News Extractor and email Sender)/src/day14/: __init__.py
Day15/: Add new column to a dataframe.ipynb  Add new column with assign and insert method.ipynb  Displaying a dataframe.ipynb  Practice.ipynb
Day15(Learning Pandas)/: Add new column with assign and insert method.ipynb  Basic Attributes,Methods and functions.ipynb  Cheat Sheet for Pandas.docx  Creating the dataframe.ipynb  Operations on DataFrames.ipynb  Selecting One column from the DataFrame.ipynb  Selecting Two or more columns in DataFrame.ipynb  Sort a DataFrame with Sort_values.ipynb  The Value_Counts Methods.ipynb
Day5 (BeautifulSoup Extracting data from API)/: Api_Scraper.py  pyproject.toml  remote_Jobs.xls
Day5 (BeautifulSoup Extracting data from API)/src/day5/: __init__.py
Day6/: Amazon_Scraper.py  pyproject.toml
Day6(Selenium Extracting product info from Amazon Website)/: Amazon_Scraper.py  Amazon_product_Urls.csv  output-07-02-2025.csv  pyproject.toml
Day6(Selenium Extracting product info from Amazon Website)/src/day6/: __init__.py
Day7(Selenium Automatic TODO list)/: pyproject.toml
Day7(Selenium Automatic TODO list)/src/day7/: __init__.py
Day8(Learning Selenium Basics)/: pyproject.toml
Day8(Learning Selenium Basics)/src/day8/: __init__.py
Day9(Selenium Automatic Booking Bot)/: Requirements.txt  pyproject.toml
Day9(Selenium Automatic Booking Bot)/src/day9/: __init__.py  hotels.xlsx
Day9(Selenium Automatic Booking Bot)/src/day9/Booking/: Booking.py  Booking_Filtration.py  Booking_report.py
Day9/src/day9/: __init__.py
