[project]
name = "day5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Raza", email = "aliraza21112005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "xlwt>=1.3.0",
]

[project.scripts]
day5 = "day5:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
