[project]
name = "day6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Raza", email = "aliraza21112005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "selenium>=4.34.0",
]

[project.scripts]
day6 = "day6:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
