[project]
name = "day7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Raza", email = "aliraza21112005@gmail.com" }
]
requires-python = ">=3.13"

dependencies = []



[project.scripts]
day7 = "day7:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
