[project]
name = "day8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Raza", email = "aliraza21112005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "selenium>=4.34.0",
]

[project.scripts]
day8 = "day8:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
