[project]
name = "day9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Raza", email = "aliraza21112005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "prettytable>=3.16.0",
    "selenium>=4.34.0",
]

[project.scripts]
day9 = "day9:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
