[project]
name = "excelfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Raza", email = "aliraza21112005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "openpyxl>=3.1.5",
    "requests>=2.32.4",
]

[project.scripts]
excelfiles = "excelfiles:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
