[project]
name = "newsproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Raza", email = "aliraza21112005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "pyinstaller>=6.14.2",
    "selenium>=4.34.2",
]

[project.scripts]
newsproject = "newsproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
